# ai-research-assistant

./: .coverage  .env  AI_Research_Assistant_Master_Plan.txt  README.md  ai_research.db  docker-compose.yml  main.py  pyproject.toml  things_done.md
alembic/: env.py
alembic/versions/: 72501adffff7_initial_schema.py
api/: deps.py
api/routers/: __init__.py  auth.py  chat.py  documents.py  notes.py  tags.py  workspaces.py
core/: config.py  database.py  security.py
models/: __init__.py  document.py  note.py  tag.py  user.py  workspace.py
schemas/: __init__.py  document.py  note.py  tag.py  user.py  workspace.py
services/: chunker.py  embeddings.py  llm.py  parser.py
tests/: conftest.py  stress_test.py  test_auth.py  test_chat.py  test_chunker.py  test_documents.py  test_embeddings.py  test_notes.py  test_parser.py  test_tags.py  test_workspaces.py
